--- a/website.ipynb
+++ b/website.ipynb
@@ -242,7 +242,7 @@
     "app = Flask(__name__)\n",
     "@app.route('/')\n",
     "def index():\n",
-    "    return render_template('Index.html')\n",
+    "    return render_template('test.html')\n",
     "\n",
     "@app.route('/Document')\n",
     "def document():\n",
